# business-improvements

./: .gitignore  README.md  requirements.txt
apps/excel-sheet-splitting/: README.md  requirements.txt
apps/excel-sheet-splitting/config/: app1_config.yaml
apps/excel-sheet-splitting/src/: main.py
apps/excel-sheet-splitting/tests/: test_main.py
apps/folder-watcher/: .gitignore  README.md
apps/folder-watcher/config/: watchers.json
apps/folder-watcher/scripts/: process_backup.bat  process_logs.bat
apps/folder-watcher/src/: watch_folder.py
apps/resize-image/: README.md  pyproject.toml
apps/resize-image/src/: main.py
apps/tdnet-xbrl-to-sqlite/: README.md  pyproject.toml  tdnet_xbrl.sqlite
apps/tdnet-xbrl-to-sqlite/docs/: SRS.md
apps/tdnet-xbrl-to-sqlite/src/tdnet_xbrl_ingestor/: cli.py
apps/tdnet-xbrl-to-sqlite/src/tdnet_xbrl_ingestor/db/: connect.py  repo.py  schema.py
apps/tdnet-xbrl-to-sqlite/src/tdnet_xbrl_ingestor/extract/: ixbrl_facts.py  labels.py  xbrl_contexts.py  xbrl_units.py
apps/tdnet-xbrl-to-sqlite/src/tdnet_xbrl_ingestor/ingest/: discover.py  normalize.py  pipeline.py
apps/tdnet-xbrl-to-sqlite/src/tdnet_xbrl_ingestor/models/: entities.py
apps/tdnet-xbrl-to-sqlite/src/tdnet_xbrl_ingestor/utils/: hashing.py  zipreader.py
apps/tdnet-xbrl-to-sqlite/src/tdnet_xbrl_ingestor/watch/: watch_folder.py
apps/tdnet-xbrl-to-sqlite/tests/: test_extract_ixbrl.py  test_extract_labels.py
apps/tdnet_downloader/: .gitignore  README.md
apps/tdnet_downloader/config/: config_sample.yaml
docs/: beginner_git_guide.md
(+3 files in other folders)
