[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tdnet-xbrl-to-sqlite"
version = "0.1.0"
description = "Ingest TDnet earnings report XBRL/iXBRL ZIP into SQLite."
requires-python = ">=3.11"
dependencies = [
  "lxml>=5.0.0",
]

[project.scripts]
tdnet-xbrl-ingest = "tdnet_xbrl_ingestor.cli:main"
